<resources>
    <string name="app_name">Gestor_CAPSA</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="configuracion">Configuración</string>
    <string name="cuidadores_activos">Cuidadores activos</string>
    <string name="citas_pendientes">Citas pendientes</string>
    <string name="notificaciones_recientes">Notificaciones recientes</string>
    <string name="servicios_completados">Servicios completados</string>
    <string name="mapa">Mapa</string>
    <string name="boton_mapa">Mapa (botón)</string>
    <string name="cuidadores">Cuidadores</string>
    <string name="boton_cuidadores">Cuidadores (botón)</string>
    <string name="citas">Citas</string>
    <string name="boton_citas">Citas (botón)</string>
    <string name="historial">Historial</string>
    <string name="boton_historial">Historial (botón)</string>
    <string name="panel_del_administrador">Panel del administrador</string>
    <string name="notificaciones_boton">Notificaciones recientes (botón)</string>
    <string name="citas_pendientes_boton">Citas pendientes (botón)</string>
    <string name="servicios_completados_boton">Servicios completados (botón)</string>
    <string name="cuidadores_activos_boton">Cuidadores activos (botón)</string>
    <string name="cambiar_tema">Cambiar tema</string>
    <string name="regresar">Regresar</string>
    <string name="cuidadores_disponibles">Cuidadores disponibles</string>
    <string name="nombre">Nombre:</string>
    <string name="estado">Estado:</string>
    <string name="ubicacion">Ubicación:</string>
    <string name="numero_de_cuidadores_activos">Número de cuidadores activos:</string>
    <string name="nombre_nombre_cuidador">Nombre: [Nombre Cuidador]</string>
    <string name="estado_estado">Estado: [Estado]</string>
    <string name="ubicacion_ubicacion">Ubicación: [Ubicación]</string>
    <string name="especialidad_especialidad">Especialidad: [Especialidad]</string>
    <string name="evidencia_placeholder">Evidencia del cuidador</string>
    <string name="citas_pendientes_cuidador">Citas pendientes</string>
    <string name="total">Total:</string>
    <string name="cita">Cita:</string>
    <string name="cuidador">Cuidador:</string>
    <string name="fecha">Fecha:</string>
    <string name="ubicacion_cuidador">Ubicación:</string>
    <string name="inicio">Inicio</string>
    <string name="calendario">Calendario</string>
    <string name="tareas">Tareas</string>
    <string name="buscar_cuidador_activo">Buscar cuidador activo</string>
</resources>
