<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E1E1E1">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4A90E2"
        android:orientation="horizontal"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/regresar"
            android:contentDescription="@string/regresar"
            tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btn_notifications"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_notificaciones"
            android:contentDescription="@string/notificaciones"
            tools:ignore="ImageContrastCheck,TouchTargetSizeCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/citas_pendientes_cuidador"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_total_citas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_main_title"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/total"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_total_citas"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:id="@+id/list_citas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#AFEEEE"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#40E0D0"
                android:padding="16dp"
                android:layout_marginBottom="8dp"
                android:layout_marginHorizontal="16dp"
                android:elevation="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cita"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cuidador"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fecha"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ubicacion_cuidador"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/menu_inferior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="63dp"
        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="3"
        tools:ignore="DisableBaselineAlignment">

        <!-- Botón de Inicio -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_inicio"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/ic_inicio"
                android:contentDescription="@string/inicio"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inicio"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_calendario"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/calendario"
                android:contentDescription="@string/calendario"
                tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calendario"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_tareas"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/ic_tareas"
                android:contentDescription="@string/tareas"
                tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tareas"
                android:textColor="#000000"
                android:textSize="17sp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
